2019-12-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-trans.c (pkl_phase_transl): Install
	pkl_transl_{pr,ps}_map handlers for struct type fields.
	(pkl_transl_pr_type_struct): Only break the pass when into a map.
	* testsuite/poke.map/maps-arrays-17.pk: New test.

2019-12-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_if_stmt): New handler.
	(pkl_phase_typify1): Install it.
	* testsuite/poke.pkl/if-diag-1.pk: New test.
	* testsuite/poke.pkl/if-diag-2.pk: Likewise.
	* testsuite/poke.pkl/if-diag-3.pk: Likewise.

2019-12-03  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf.pk (Elf64_Sym): New type.
	(STB_LOCAL): New variable.
	(STB_GLOBAL): Likewise.
	(STB_WEAK): Likewise.
	(STB_LOOS): Likewise.
	(STB_HIOS): Likewise.
	(STB_LOPROC): Likewise.
	(STB_HIPROC): Likewise.
	(STV_DEFAULT): Likewise.
	(STV_INTERNAL): Likewise.
	(STV_HIDDEN): Likewise.
	(STV_PROTECTED): Likewise.

2019-12-01 John Darrington <john@darrington.wattle.id.au>

	* doc/poke.texi (dump): Numerous minor changes.

2019-12-01 Luca Saiu <positron@gnu.org>

	* src/pkl-insn.def (PKL_INSN_TUCK): Define new instruction.
	* src/pvm.jitter (rot, nrot): Simplify definition using Jitter
	macro.
	(tuck): New instruction.
	(revn): Add specialized arguments.  Use unsigned JITTER_ARGU0 to
	catch bugs more easily.
	(swap-over-to-tuck): New rewrite rule.
	(rot-swap-to-quake): Re-introduce deleted rewrite rule, which was
	actually correct.
	* pkl-asm.pks (remap, write, addo, subo, mulo, divo, modo, atrim)
	(cdivo, ais, bconc): Simplify and optimize using new instructions.
	* src/pkl-gen.pks (struct_field_mapper): Likewise.
	
2019-12-01 John Darrington <john@darrington.wattle.id.au>

	* src/pk_dump.pk (dump): New parameter cluster_by

2019-12-01 John Darrington <john@darrington.wattle.id.au>

	* doc/poke.texi (dump): Document the dump command.

2019-11-30 John Darrington <john@darrington.wattle.id.au>

	* testsuite/poke.std/crc32.pk: New file.
